--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "my-app",
+  "name": "chat-ai",
   "version": "0.1.0",
-  "private": true,
+  "description": "web chat ai using groq-sdk module",
+  "author": "@Rlzyy",
+  "private": false,
   "scripts": {
     "dev": "next dev --port 3000 --hostname 0.0.0.0",
     "build": "next build",
